--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -66,11 +66,7 @@
 
   <script type="module" src="/src/_includes/scripts.js" async></script>
   <style>
-    {
-      % postcss stylesheets,
-      page.outputPath,
-      process.env.DEVELOPMENT==='true' %
-    }
+    {% postcss stylesheets, page.outputPath, process.env.DEVELOPMENT==='true' %}
   </style>
 </head>
 
