Add url to permalink

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -22,7 +22,7 @@
             {{ date | formatDate('Do of MMMM, YYYY') }}
           </time>
           |
-          <a class="u-url"  href="{{ page.url }}">permalink<span class="visuallyhidden"> to this post</span></a>
+          <a class="u-url"  href="https://petergoes.nl{{ page.url }}">permalink<span class="visuallyhidden"> to this post</span></a>
         </small>
         <small class="blog__tags">
           Filled under:
