--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -45,7 +45,7 @@
           <small><a rel="syndication" class="u_syndication" href="{{ post.data.tweetUrl }}">This {{ collection }} on Twitter</a></small>
         {% endif %}
         {% if post.data.tootUrl %}
-          <small><a rel="syndication" class="u_syndication" href="{{ post.data.tootUrl }}">This {{ collection }} on toot.cafe</a></small>
+          <small><a rel="syndication" class="u_syndication" href="{{ post.data.tootUrl }}">This {{ collection }} on Mastodon</a></small>
         {% endif %}
       {% endif %}
       {% if post.data.description %}
