--- a/content/_files/blog-rss.njk
+++ b/content/_files/blog-rss.njk
@@ -34,12 +34,8 @@
     <id>{{ absolutePostUrl }}</id>
     <content type="html">
       {% if post.data.tags.includes('rss-club') %}
-        <aside>
-          <pre>
-            It's a secret to everyone! This post is for RSS subscribers only.
-            <a href="https://daverupert.com/rss-club/">Read more about RSS Club</a>
-          </pre>
-        </aside>
+        {% set notice = '<aside><pre>It\'s a secret to everyone! This post is for RSS subscribers only.<a href="https://daverupert.com/rss-club/">Read more about RSS Club</a></pre></aside>' %}
+        {{ notice }}
       {% endif %}
       {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
     </content>
