--- a/content/_files/blog-rss.njk
+++ b/content/_files/blog-rss.njk
@@ -34,7 +34,7 @@
     <id>{{ absolutePostUrl }}</id>
     <content type="html">
       {% if post.data.tags.includes('rss-club') %}
-        {% set notice = '<p>It\'s a secret to everyone! This post is for RSS subscribers only.<a href="https://daverupert.com/rss-club/">Read more about RSS Club</a></p>' %}
+        {% set notice = '<aside><tt>It\'s a secret to everyone! This post is for RSS subscribers only. <a href="https://daverupert.com/rss-club/">Read more about RSS Club</a></tt></aside>' %}
         {{ notice }}
       {% endif %}
       {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
